feat: Update translator package with new translations
This commit updates the translator package by adding new translations for the signup and signin pages in both English and Spanish. It also renames the translation files to a more appropriate location within the package.

--- a/pkg/translator/en-en.toml
+++ b/pkg/translator/en-en.toml
@@ -8,7 +8,10 @@ user = "user"
 users = "users"
 active = "active"
 signup = "sign up"
+signup-success = "signup successfully"
 password = "password"
 register = "sign up"
 already-signup = "already have an account?"
 confirm-password = "confirm password"
+signin = "login"
+not-signup = "Not an account yet?"
