--- a/pkg/translator/es-es.toml
+++ b/pkg/translator/es-es.toml
@@ -8,7 +8,10 @@ user = "usuario"
 users = "usuarios"
 active = "activo"
 signup = "registro"
+signup-success = "registro realizado correctamente"
 password = "contrasena"
 register = "registrar"
 already-signup = "Ya tienes una cuenta?"
 confirm-password = "confirmar contrasena"
+signin = "login"
+not-signup = "Todavía no tienes una cuenta?"
